--- a/pom.xml
+++ b/pom.xml
@@ -357,6 +357,6 @@
 				<directory>src/main/resources</directory>
 			</resource>
 		</resources>
-		<finalName>renren-security</finalName>
+		<finalName>grocery_store</finalName>
 	</build>
 </project>
