--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-jdbc.url=jdbc:mysql://localhost:3333/renren-security?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://localhost:3333/grocery_store?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
 jdbc.password=root
 
