--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 		<taglibs-version>1.1.2</taglibs-version>
 		<freemarker-version>2.3.23</freemarker-version>
 		<jackson-version>2.8.4</jackson-version>
+		<webmagic-version>0.6.1</webmagic-version>
 	</properties>
 
 	<!-- 阿里云maven仓库 -->
@@ -310,6 +311,18 @@
 			<artifactId>com.baidu.ueditor</artifactId>
 			<version>1.1.2-edit-1.0</version>
 		</dependency>
+		<!--webmagic 爬虫-->
+		<dependency>
+			<groupId>us.codecraft</groupId>
+			<artifactId>webmagic-core</artifactId>
+			<version>${webmagic-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>us.codecraft</groupId>
+			<artifactId>webmagic-extension</artifactId>
+			<version>${webmagic-version}</version>
+		</dependency>
+
 
 	</dependencies>
 
