--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -2,6 +2,9 @@ jdbc.url=jdbc:mysql://localhost:3333/grocery_store?allowMultiQueries=true&useUni
 jdbc.username=root
 jdbc.password=root
 
+#jdbc.url=jdbc:mysql://127.0.0.1:3333/grocery_store?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+#jdbc.username=root
+#jdbc.password=timMysql159874
 jdbc.initialSize=5
 jdbc.maxActive=30
 
